[gd_scene format=3 uid="uid://cls0tw4vvvuyp"]

[ext_resource type="Script" uid="uid://bkp2emdspdpw3" path="res://player/scripts/player.gd" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://cguku5dwobmpx" path="res://npc/sprites/Sprite5.png" id="2_qjkh3"]
[ext_resource type="PackedScene" uid="uid://du0vsae6m3n3n" path="res://systems/emote_popup.tscn" id="3_boad6"]
[ext_resource type="Script" uid="uid://ccgvdser8mst8" path="res://player/scripts/state_idle.gd" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://bjosqd654der5" path="res://player/scripts/player_state_machine.gd" id="3_qjkh3"]
[ext_resource type="Texture2D" uid="uid://b3qhifl8qwy5x" path="res://npc/sprites/Character-Sprite.png" id="3_rgyib"]
[ext_resource type="Script" uid="uid://blww31dnk2ulv" path="res://player/scripts/state_walk.gd" id="4_yw30f"]
[ext_resource type="AudioStream" uid="uid://bsd38gd257xj5" path="res://systems/sounds/sound_footsteps-hallway2.mp3" id="7_rgyib"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kqu6x"]
radius = 7.777778

[sub_resource type="Animation" id="Animation_rkbax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oul6g"]
resource_name = "idle_down"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.46666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_yw30f"]
resource_name = "idle_side"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.46666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [11, 11]
}

[sub_resource type="Animation" id="Animation_g1dw6"]
resource_name = "idle_up"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.46666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [4, 5, 5, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_qjkh3"]
resource_name = "walk_down"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [16, 17, 18, 19, 20, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.23333335, 0.46666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_boad6"]
resource_name = "walk_side"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3, 0.46666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_g6k8r"]
resource_name = "walk_up"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [22, 23, 24, 25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D_:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rkbax"]
_data = {
&"RESET": SubResource("Animation_rkbax"),
&"idle_down": SubResource("Animation_oul6g"),
&"idle_side": SubResource("Animation_yw30f"),
&"idle_up": SubResource("Animation_g1dw6"),
&"walk_down": SubResource("Animation_qjkh3"),
&"walk_side": SubResource("Animation_boad6"),
&"walk_up": SubResource("Animation_g6k8r")
}

[sub_resource type="Gradient" id="Gradient_boad6"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.5314685, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.245112, 0.245112, 0.24511194, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rgyib"]
gradient = SubResource("Gradient_boad6")
width = 512
height = 512
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.51282054)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_boad6"]
radius = 6.666667

[node name="Player" type="CharacterBody2D" unique_id=2105237732]
collision_mask = 16
script = ExtResource("1_rkbax")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1440163257]
position = Vector2(0, -17.094076)
texture = ExtResource("2_qjkh3")
hframes = 8
vframes = 8

[node name="Sprite2D_" type="Sprite2D" parent="." unique_id=11100295]
visible = false
position = Vector2(0, -16)
texture = ExtResource("3_rgyib")
hframes = 4
vframes = 5

[node name="Sprite2D-DialogueSprite" type="Sprite2D" parent="." unique_id=855155659]
visible = false
position = Vector2(0, -11)
texture = ExtResource("2_qjkh3")
region_enabled = true
region_rect = Rect2(16, 7, 16, 22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=294318798]
position = Vector2(0, -8.888879)
shape = SubResource("CircleShape2D_kqu6x")

[node name="AnimationPlayer_" type="AnimationPlayer" parent="." unique_id=800597645]
libraries/ = SubResource("AnimationLibrary_rkbax")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1043480459]
libraries/ = SubResource("AnimationLibrary_rkbax")

[node name="EmotePopup" parent="." unique_id=1003427282 instance=ExtResource("3_boad6")]
visible = false
position = Vector2(0, -36.666676)

[node name="Camera2D" type="Camera2D" parent="." unique_id=768476163]
zoom = Vector2(3, 3)
limit_enabled = false
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="PlayerStateMachine" type="Node" parent="." unique_id=1144032892]
script = ExtResource("3_qjkh3")

[node name="Idle" type="Node" parent="PlayerStateMachine" unique_id=1338488222]
script = ExtResource("3_g1dw6")

[node name="Walk" type="Node" parent="PlayerStateMachine" unique_id=141595110]
script = ExtResource("4_yw30f")
walk_sound = ExtResource("7_rgyib")

[node name="LightAmbient" type="PointLight2D" parent="." unique_id=1689423373]
visible = false
z_index = 1
position = Vector2(0, -17.777777)
color = Color(0.97265625, 0.97265625, 0.97265625, 1)
energy = 0.33
texture = SubResource("GradientTexture2D_rgyib")

[node name="LightMain" type="PointLight2D" parent="." unique_id=1721456157]
visible = false
light_mask = 3
visibility_layer = 3
z_index = 1
position = Vector2(0, -17.777779)
energy = 0.33
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 2.0
texture = SubResource("GradientTexture2D_rgyib")
texture_scale = 0.25

[node name="Audio" type="Node2D" parent="." unique_id=1537167905]
visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio" unique_id=30640614]

[node name="Player_InteractionArea" type="Area2D" parent="." unique_id=544560367]
position = Vector2(0, -8.888891)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_InteractionArea" unique_id=603869303]
shape = SubResource("CircleShape2D_boad6")
debug_color = Color(0.11451721, 0.30859375, 0.21743658, 0.41960785)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." unique_id=1054436923]
path_postprocessing = 2
simplify_path = true
